--- a/code/R/Sample R Notebook.Rmd
+++ b/code/R/Sample R Notebook.Rmd
@@ -9,7 +9,7 @@ output:
     df_print: paged
 ---
 
-R Notebooks use R Markdown.  Code stored in "chunks."  Chunks can be executed individually or as a group.  Code can be in a variety of lanugages -- noteably for us -- R, Python, and SQL.  Information at: https://rmarkdown.rstudio.com/.
+R Notebooks use R Markdown.  Code stored in "chunks."  Chunks can be executed individually or as a group.  Code can be in a variety of languages -- notably for us -- R, Python, and SQL.  Information at: https://rmarkdown.rstudio.com/.
 
 Example of an R chunk:
 
